--- a/scss/tinymce/_tinymce-content.scss
+++ b/scss/tinymce/_tinymce-content.scss
@@ -2,4 +2,11 @@
 	min-height: 100px;
 	background-color: rgba(0,0,0,0.2);
 	height: 100%;
+	margin: 0 ;
+
+	p {
+		display: block;
+		margin-block-start: 7px;
+		margin-block-end: 7px;
+	}
 }
