--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -25,7 +25,7 @@
 		<section class="sheet-top">
 
 			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
-			<input class="sheet-subtitle shadowed" type="text" name="system.full_name" value="{{system.full_name}}"
+			<input class="sheet-subtitle shadowed" type="text" name="system.subtitle" value="{{system.subtitle}}"
 				placeholder="Full Name">
 
 			{{> "systems/eunos-blades/templates/components/comp.hbs" items.playbook
