--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -119,7 +119,7 @@
 
 		</section>
 
-		{{!-- Tabs, Tab Navication --}}
+		{{!-- Tabs, Tab Navigation --}}
 		<section class="tab-content nav-group flex-vertical">
 			{{!-- Nav menu --}}
 			<nav class="nav-tabs flex-horizontal">
