--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -2,63 +2,111 @@
 
 	{{!-- Actor Img: Portrait & Background Overlay --}}
 	<img class="sheet-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
+	{{#unless (test actor.img "==" "icons/svg/mystery-man.svg")}}
 	<div class="sheet-img-bg full-width">
 		<img src="{{actor.img}}" />
 	</div>
+	{{/unless}}
+
+	{{!-- SubActor GM Alert --}}
+	{{#if isGM}}{{#if isSubActor}}
+	<div class="gm-alert-header">Editing as SubActor of {{parentActor.name}}</div>
+	{{/if}}{{/if}}
+
+	{{!-- Tags --}}
+	{{#if isGM}}
+	<input type="text" class="comp-tags tags-gm" />
+	{{/if}}
 
 	{{!-- Sheet Container --}}
 	<div class="sheet-root">
+
 		{{!-- Header --}}
 		<section class="sheet-top">
-
 			<input class="sheet-title shadowed" type="text" name="name" value="{{actor.name}}">
-	</section>
 
-  <section class="item-main flex-vertical">
-		<label class="label-stripe">{{localize "BITD.Description"}}</label>
-			<textarea rows="2" name="system.description">{{system.description}}</textarea>
-		<label class="label-stripe">{{localize "BITD.FactionType"}}</label>
-			{{system.type}}<br><br>
-		<label class="label-stripe">{{localize "BITD.Tier"}}</label>
-			<textarea rows="1" name="system.tier">{{system.tier}}</textarea>
-		<label class="label-stripe">{{localize "BITD.Notes"}}</label>
-			<textarea rows="2" name="system.notes">{{system.notes}}</textarea>
+			{{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
 
-			{{#if isGM }}
-					<label class="label-stripe">{{localize "BITD.Goal"}}</label>
-					<div class="flex-horizontal clock-block" id="faction-goal-clock">
+			<input class="sheet-subtitle shadowed" type="text" name="system.subtitle" value="{{system.subtitle}}"
+				placeholder="Overview">
+		</section>
 
-						<div class="goal-clock clock-container flex-vertical">
-							{{> "systems/eunos-blades/templates/components/clock.hbs"
-							target="system.goal_1.value"
-							data=goal_1_clock
-							}}
-							<textarea name="system.goal_1.name">{{system.goal_1.name}}</textarea>
-						</div>
-						<div class="goal-clock clock-container flex-vertical">
-							{{> "systems/eunos-blades/templates/components/clock.hbs"
-							target="system.goal_2.value"
-							data=goal_2_clock
-							}}
-							<textarea name="system.goal_2.name">{{system.goal_2.name}}</textarea>
-						</div>
+		{{!-- Tabs, Tab Navigation --}}
+		<section class="tab-content nav-group flex-vertical">
+			{{!-- Nav menu --}}
+			<nav class="nav-tabs flex-horizontal">
+				<a class="tab-selector" data-tab="overview">Overview</a>
+				<a class="tab-selector" data-tab="people">People</a>
+				<a class="tab-selector" data-tab="clocks">Clocks</a>
+				{{#if isGM}}
+				<a class="tab-selector" data-tab="gm-notes">GM Notes</a>
+				<a class="tab-selector" data-tab="all-items">All Items</a>
+				{{/if}}
+			</nav>
 
-					</div>
-					<label class="label-stripe">{{localize "BITD.NotableNPCs"}}</label>
-					<textarea rows="10" name="system.notables">{{system.notables}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Turf"}}</label>
-					<textarea rows="2" name="system.turf">{{system.turf}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Assets"}}</label>
-					<textarea rows="1" name="system.assets">{{system.assets}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Quirks"}}</label>
-					<textarea rows="1" name="system.quirks">{{system.quirks}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Allies"}}</label>
-					<textarea rows="1" name="system.allies">{{system.allies}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Enemies"}}</label>
-					<textarea rows="1" name="system.enemies">{{system.enemies}}</textarea>
-					<label class="label-stripe">{{localize "BITD.Situation"}}</label>
-					<textarea rows="10" name="system.situation">{{system.situation}}</textarea>
+			{{!-- Overview --}}
+			<div class="tab overview flex-vertical" data-tab="overview">
+				<label class="tab-label">
+					<span class="tab-title">Description</span>
+				</label>
+				{{editor system.description target="system.description" button=true owner=owner editable=editable}}
+
+				<label class="tab-label">
+					<span class="tab-title">Assets</span>
+				</label>
+				{{editor system.assets target="system.assets" button=true owner=owner editable=editable}}
+
+				<label class="tab-label">
+					<span class="tab-title">Situation</span>
+				</label>
+				{{editor system.situation target="system.situation" button=true owner=owner editable=editable}}
+
+			</div>
+
+
+			{{!-- People --}}
+			<div class="tab people flex-vertical" data-tab="people">
+
+			</div>
+
+			{{!-- Clocks --}}
+			<div class="tab clocks flex-vertical" data-tab="clocks">
+
+			</div>
+
+
+			{{!-- GM-ONLY TABS --}}
+			{{#if isGM}}
+
+			{{!-- GM Notes & Effects Tab --}}
+			<div class="tab gm-notes flex-vertical" data-tab="gm-notes">
+				<label class="tab-label">
+					<span class="tab-title">GM Notes</span>
+				</label>
+				{{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
+				<label class="tab-label">
+					<span class="tab-title">{{localize "BITD.Effects"}}</span>
+				</label>
+				{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+			</div>
+
+			{{!-- Full Item List Tab --}}
+			<div class="tab all-items flex-vertical" data-tab="all-items">
+				<label class="comp tab-label">
+					<span class="tab-title">{{localize "BITD.AllItems"}}</span>
+				</label>
+
+				{{#each actor.items as |item id|}}
+				{{> "systems/eunos-blades/templates/components/comp.hbs" item
+				id=item.id
+				class="comp-desc-trait comp-horizontal full-width"
+				docType="Item"
+				remFullButton=true
+				}}
+				{{/each}}
+			</div>
+
 			{{/if}}
-  </section>
+		</section>
 	</div>
 </form>
