--- a/scss/style.scss
+++ b/scss/style.scss
@@ -163,7 +163,7 @@
           @import './tinymce/tinymce-content';
         }
         &:first-child {
-          margin-top: 30px;
+          // margin-top: 30px;
         }
       }
 
