--- a/templates/items/item-sheet.hbs
+++ b/templates/items/item-sheet.hbs
@@ -1,21 +1,31 @@
 <form class="{{cssClass}}" autocomplete="off">
 
+  {{!-- Item Img --}}
+  <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
+
+  {{!-- Tags --}}
+  {{#if isGM}}
+  <input type="text" class="comp-tags tags-gm" />
+  {{/if}}
+
+  {{!-- Sheet Container --}}
   <div class="sheet-root">
 
-    {{#if isGM}}
-    <input type="text" class="comp-tags tags-gm" />
-    {{/if}}
-
+    {{!-- Header --}}
     <section class="sheet-top">
-      <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-      <input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}"
-        placeholder="{{localize 'BITD.Name'}}" />
+
+      <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="What Is This?" />
+
+      {{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
+
     </section>
 
-    <section class="item-main flex-vertical">
+    {{!-- Body --}}
+    <section class="tab-content flex-vertical">
+
       {{#if isEmbeddedItem}}
       <label class="tab-label">
-        <span class="tab-title">Description OKAY!</span>
+        <span class="tab-title">Description</span>
       </label>
       {{editor system.description target="system.description" button=true owner=owner editable=editable}}
       {{/if}}
@@ -25,11 +35,16 @@
       </label>
       {{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
 
-      {{#if (test isGM "||" system.rules_notes)}}
       <label class="tab-label">
-        <span class="tab-title">Additional Rules Notes</span>
+        <span class="tab-title">Notes</span>
       </label>
-      {{editor system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
+      {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
+
+      {{#if isGM}}
+      <label class="tab-label">
+        <span class="tab-title">GM Notes</span>
+      </label>
+      {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
       {{/if}}
 
       <div class="flex-horizontal">
