--- a/templates/items/ability-sheet.hbs
+++ b/templates/items/ability-sheet.hbs
@@ -23,21 +23,9 @@
       {{editor system.description target="system.description" button=true owner=owner editable=editable}}
       {{/if}}
 
-      <label class="tab-label">
-        <span class="tab-title">Rules</span>
-      </label>
-      {{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
-
-      {{#if (test isGM "||" system.notes)}}
-      <label class="tab-label">
-        <span class="tab-title">Notes</span>
-      </label>
-      {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
-      {{/if}}
-
       {{#if (test isGM "||" system.uses_per_score)}}
       <div class="flex-horizontal full-width">
-        {{#if (test isGM "||" system.price)}}
+        {{#if (test isGM "||" (test system.price "&&" (test system.price ">" 1)))}}
         <div class="comp comp-horizontal">
           <label class="comp-label comp-input-label">Cost: </label>
           <input class="comp-number-input shadowed" data-dtype="Number" type="number" name="system.price" value="{{system.price}}">
@@ -58,6 +46,25 @@
         </div>
         {{/if}}
       </div>
+      {{/if}}
+
+      <label class="tab-label">
+        <span class="tab-title">Rules</span>
+      </label>
+      {{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
+
+      {{#if (test isGM "||" system.notes)}}
+      <label class="tab-label">
+        <span class="tab-title">Notes</span>
+      </label>
+      {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
+      {{/if}}
+
+      {{#if isGM}}
+      <label class="tab-label">
+        <span class="tab-title">GM Notes</span>
+      </label>
+      {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
       {{/if}}
 
       {{#if isGM}}
