--- a/templates/items/simple-sheet.hbs
+++ b/templates/items/simple-sheet.hbs
@@ -1,24 +1,22 @@
 <form class="{{cssClass}}" autocomplete="off">
 
+  {{!-- Tags --}}
+  {{#if isGM}}
+  <input type="text" class="comp-tags tags-gm" />
+  {{/if}}
+
+  {{!-- Sheet Container --}}
   <div class="sheet-root">
 
-    {{#if isGM}}
-    <input type="text" class="comp-tags tags-gm" />
-    {{/if}}
-
+    {{!-- Header --}}
     <section class="sheet-top">
       <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-      <input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}"
-        placeholder="{{localize 'BITD.Name'}}" />
-      {{#if tierData}}
-      {{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
-      {{/if}}
-      {{#if system.subtitle}}
-      <input class="sheet-subtitle shadowed" type="text" name="system.subtitle" value="{{system.subtitle}}">
+      <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}">
     </section>
 
-    <section class="item-main flex-vertical">
-      {{#if isEmbeddedItem}}
+    {{!-- Body --}}
+    <section class="tab-content flex-vertical">
+      {{#if (test isGM "||" isEmbeddedItem)}}
       <label class="tab-label">
         <span class="tab-title">Description</span>
       </label>
@@ -30,45 +28,30 @@
       </label>
       {{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
 
-      {{#if (test isGM "||" system.rules_notes)}}
+      {{#if (test isGM "||" system.notes)}}
       <label class="tab-label">
-        <span class="tab-title">Additional Rules Notes</span>
+        <span class="tab-title">Notes</span>
       </label>
-      {{editor system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
-      {{/if}}
-
-      {{#if (test isGM "||" (test system.load "||" (test system.uses.max "||" system.num_available)))}}
-      <div class="flex-horizontal">
-        {{#if (test isGM "||" system.load)}}
-        <div class="comp comp-horizontal">
-          <label>Load: </label>
-          <input data-dtype="Number" type="number" name="system.load" value="{{system.load}}">
-        </div>
-        {{/if}}
-        {{#if (test isGM "||" system.uses.max)}}
-        <div class="comp comp-horizontal">
-          <label>Uses: </label>
-          <input data-dtype="Number" type="number" name="system.uses.max" value="{{system.uses.max}}">
-        </div>
-        {{/if}}
-        {{#if (test isGM "||" system.num_available)}}
-        <div class="comp comp-horizontal">
-          <label>Max per Score: </label>
-          <input data-dtype="Number" type="number" name="system.num_available" value="{{system.num_available}}">
-        </div>
-        {{/if}}
-      </div>
+      {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
       {{/if}}
 
       {{#if isGM}}
       <label class="tab-label">
-        <span class="tab-title">Active Effects</span>
-        <a class="effect-control" data-action="create" title="Create Effect">
+        <span class="tab-title">GM Notes</span>
+      </label>
+      {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
+      {{/if}}
+
+      {{#if isGM}}
+      <label class="comp tab-label">
+        <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
           <i class="fas fa-plus-square"></i>
         </a>
+        <span class="tab-title">Active Effects</span>
       </label>
       {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
       {{/if}}
     </section>
+    <section class="sheet-footer-small"></section>
   </div>
 </form>
