--- a/templates/items/vice-sheet.hbs
+++ b/templates/items/vice-sheet.hbs
@@ -1,43 +1,60 @@
-<form class="{{cssClass}} item-sheet" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off">
 
+  {{!-- Tags --}}
+  {{#if isGM}}
+  <input type="text" class="comp-tags tags-gm" />
+  {{/if}}
+
+  {{!-- Sheet Container --}}
   <div class="sheet-root">
 
-    {{#if isGM}}
-    <input type="text" class="tag-entry" />
-    {{/if}}
-
+    {{!-- Header --}}
     <section class="sheet-top">
       <img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-      <input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}"
-        placeholder="{{localize 'BITD.Name'}}" />
+      <input class="sheet-title shadowed" type="text" name="name" value="{{item.name}}">
+      {{> "systems/eunos-blades/templates/components/comp.hbs" tierData}}
     </section>
 
-    <section class="item-main flex-vertical">
-      {{#if isEmbeddedItem}}
+    {{!-- Body --}}
+    <section class="tab-content flex-vertical">
+
+      {{#if (test isGM "||" isEmbeddedItem)}}
       <label class="tab-label">
         <span class="tab-title">Description</span>
       </label>
       {{editor system.description target="system.description" button=true owner=owner editable=editable}}
       {{/if}}
 
+
       <label class="tab-label">
         <span class="tab-title">Rules</span>
       </label>
       {{editor system.rules target="system.rules" button=true owner=owner editable=editable}}
 
-      {{#if (test isGM "||" system.rules_notes)}}
+      {{#if (test isGM "||" system.notes)}}
       <label class="tab-label">
-        <span class="tab-title">Additional Rules Notes</span>
+        <span class="tab-title">Notes</span>
       </label>
-      {{editor system.rules_notes target="system.rules_notes" button=true owner=owner editable=editable}}
+      {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
       {{/if}}
 
       {{#if isGM}}
       <label class="tab-label">
+        <span class="tab-title">GM Notes</span>
+      </label>
+      {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=editable}}
+      {{/if}}
+
+      {{#if isGM}}
+      <label class="comp tab-label">
+        <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
+          <i class="fas fa-plus-square"></i>
+        </a>
         <span class="tab-title">Active Effects</span>
       </label>
       {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
       {{/if}}
     </section>
+    <section class="sheet-footer-small"></section>
   </div>
 </form>
